# arabic_dialects_qna_gen

./: .gitignore  README.md  agent_llm_as_a_judge.py  agent_llm_as_a_judge2.py  agent_question_builder.py  agent_question_builder2.py  agentic_approach.py  build_qna_benchmark_table.py  build_results_table.py  corrected_passage_restoration_google_sheets.py  dialect_estimation.py  dialectness.csv  fill_qna_form.py  fill_qna_form_egyptian.py  fill_qna_form_emirati.py  fill_qna_form_syrian.py  final_results_table.csv  final_results_table2.csv  gemini_passages_assessment.py  gemini_passages_assessment_sheets.py  generate_questions.py  iaa_results_table.csv  pyproject.toml  qna_dataset_table.csv  qna_dataset_table_with_generated_answers.csv  qna_dataset_table_with_generated_answers_and_evaluations.csv  qna_llm_perfomance_measure.py  question_logs.txt  question_logs_egyptian.csv  question_logs_egyptian.txt  question_logs_egyptian_old.csv  random_valid.py  test.txt
